# qwen-coding-engine

./: .context_builder_checkpoint.json  .env.example  .gitignore  AGENTS.md  BUILD_GUIDE.md  CHANGELOG.md  Dockerfile  LP_SYSTEM_PROMPT.md  README.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  SESSION_CONTEXT.md  _PROJECT_CONTEXT.md  audit_tokens.py  audit_tokens_report.md  debug_api_fix.py  debug_dry_run.py  demo_adr_example.py  fix_cache.py  hf_output.txt  hf_sync_res.txt  out.txt  out_test.txt  pyproject.toml  pytest_out.txt  qwen-coding-local.code-workspace  registry_test_out.txt  server_927b1e0.py  server_old.py  sparring_test_out.txt  sync_repos.py  test_api_response.txt  test_broadcast.py  test_coder.py  test_dry_run_direct.py  test_engine.py  test_full_flow.py  test_import.py  (+12 more)
.PLAN/: BACKLOG.md  CHANGELOG.md  ORPHANED_TASKS.md  batch_task_plan.md  enforcement-architectural-plan.md  qwen-coding-enforcement-architect-brief.md  qwen-coding-project-context-template.md
.anti_degradation/: audit_history.jsonl  config.yaml
.context/: _DATA_CONTEXT.md  _PROJECT_CONTEXT.md
.decision_log/: decision_log.parquet
.inbox/: HUD_AUDIT_REPORT_2026-03-28.md  SPARRING_TIMEOUT_INVESTIGATION.md  context_tools_blueprint.md  kontekst_dla_sparring_pro.md  req_125201.py  req_132158.json  req_132158.py  req_132640.py  req_142139.json  req_142139.py  req_165449.json  req_165449.py  req_165545.py  res_165449.json
.qwen/: settings.json  settings.json.orig
.recipes/: RB-01-hud-security-fix.md
.snapshots/: baseline-pre-enforcement.md
.sparring_sessions/: sp_7eef94d7b781.json  sp_8242bf671b4a.json  sp_c670f07b2d81.json  sp_d3d4c8c14b43.json
docs/: ARCHITECTURE.md  CONTEXT_TOOLS.md  DOC.Qwen-multi-turn-conversations.md  Doc.Qwen-deep_thinking_qwen.md  EXAMPLE.md  INSTALL_MCP.md  LINKEDIN_STORYBOARD_PL.md  LP_SYSTEM_PROMPT.md  REPAIR_PROTOCOL.md  SESSION_STORAGE_FIX.md  SPARRING_V2.md  TDD.md
plans/: HUD_FIX_BLUEPRINT.md  HUD_PHASE3_IMPLEMENTATION.md
(+242 files in other folders)
