[project]
name = "qwen-mcp"
version = "0.1.0"
description = "MCP server for Qwen models via Alibaba DashScope"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.1",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "platformdirs>=4.0.0",
    "duckdb>=1.4.4",
]

[project.scripts]
qwen-mcp = "qwen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_mcp"]
